change menu page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
-<section class="content">
-
+<div class="image-top">
+	<img src="assets/images/top.jpeg" width="100%" />
+</div>
+<div class="home">
 	<h1>Bem vindo a Koffiehuis!</h1>
 
 	<button class="btn btn-primary btn-lg" [routerLink]="['/menu']">Fazer Pedido</button>
 	<button class="btn btn-primary btn-lg" [routerLink]="['/menu']">Conheça a história!</button>
 	<button class="btn btn-primary btn-lg" [routerLink]="['/menu']">Ganhe um brinde!</button>
 	<button class="btn btn-primary btn-lg" [routerLink]="['/menu']">Chamar o garçom</button>
-
-</section>
+</div>
