--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,26 @@
 }
 
 .home {
-    margin-top: 60px;
+    margin-top: 50px;
     padding-left: 40px;
+}
+
+.home h1 {
+    margin-bottom: 25px;
+}
+
+.home button i {
+    display: block;
+    font-size: 40px;
+}
+
+.home button span {
+    font-size: 25px;
+    line-height: 55px;
+}
+
+.home .options {
+    margin-top: 15px;
 }
 
 .box {
