--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@
 .home button i {
     display: block;
     font-size: 40px;
+    margin-top: 10px;
 }
 
 .home button span {
@@ -36,6 +37,25 @@
 
 .home .options {
     margin-top: 15px;
+}
+
+.history {
+    margin-top: 40px;
+    padding-left: 40px;
+}
+
+.history h1 {
+    margin-bottom: 15px;
+}
+
+.history p {
+    margin-left: 0;
+    margin-right: 40px;
+    font-size: 18px;
+}
+
+.history button {
+    margin-bottom: 15px;
 }
 
 .box {
@@ -207,4 +227,81 @@
 
 .image-top {
     margin-left: -30px;
+}
+
+.loading {
+    opacity: 0.8;
+    background-color: #000;
+    -webkit-transition: background-color 1s ease-in;
+    transition: background-color 1s ease-in;
+    display: -webkit-box;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+}
+
+.loading .info-box {
+    position: relative;
+    text-align: center;
+    z-index: 2;
+}
+
+.loading .info-box span {
+    font-size: 35px;
+    line-height: 55px;
+    text-align: center;
+    -webkit-transition: color 1s ease-in;
+    transition: color 1s ease-in;
+    color: #fff;
+}
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    position: relative;
+    margin: 30px auto;
+    margin-top: 0;
+}
+  
+.double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+}
+  
+.double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+  
+@-webkit-keyframes sk-bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
+}
+  
+@keyframes sk-bounce {
+    0%, 100% { 
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+    } 50% { 
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
+    }
 }
