--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
 
 	<div class="row options">
 		<div class="col-4 offset-md-2">
-			<button class="btn btn-secondary btn-lg btn-block" [routerLink]="['/menu']">
+			<button class="btn btn-secondary btn-lg btn-block" [routerLink]="['/gift']">
 				<i class="fa fa-gift"></i>
 				<span>Ganhe um brinde</span>
 			</button>
