--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,19 @@
     margin-bottom: 15px;
 }
 
+.gift {
+    margin-top: 40px;
+    padding-left: 40px;
+}
+
+.gift h1 {
+    margin-bottom: 15px;
+}
+
+.gift button {
+    margin-bottom: 15px;
+}
+
 .box {
     border: 1px solid #E5E5E5;
     background: #f5f5f5;
@@ -172,6 +185,8 @@
     right: 0;
     height: 100%;
     padding-top: 20px;
+    overflow-y: scroll;
+    padding-bottom: 30px;
 }
 
 .shopping-cart .product:first-child {
