--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,140 @@
-<p>
-  admin works!
-</p>
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Logo</a>
+		</div>
+		<ul class="nav navbar-nav navbar-right">
+			<li class="button_logout">
+				<button class="btn btn-default" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
+			</li>
+		</ul>
+	</div>
+</nav>
+
+<section>
+	<section class="wrapper">
+		<div class="row">
+			<div class="col-sm-12 list-tables">
+				<section class="panel">
+					<div class="panel-body">
+						<div class="row tables">
+							<div class="col-sm-3" *ngFor="let table of tables"
+								[ngClass]="{'red': table.status == 2, 'yellow': table.status == 3, 'blue': table.status == 4, 'green': table.status == 5}">
+								<span>{{table.name}}</span>
+								<div class="row">
+									<div class="col-sm-4 text-center">
+										<a><i class="fa fa-search"></i></a>
+									</div>
+									<div class="col-sm-4 text-center">
+										<i class="fa fa-gift" *ngIf="table.gift"></i>
+									</div>
+									<div class="col-sm-4 text-center">
+										<i class="fa fa-bullhorn" *ngIf="table.waiter"></i>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
+			<div class="col-sm-4 last-orders">
+				<h4>Histórico</h4>
+				<div class="row">
+					<div class="col-sm-12" *ngFor="let order of orders"
+						[ngClass]="{'purple': order.status == 1, 'grey': order.status == 2}">
+						<span>
+							{{order.table}} - Pedido {{order.number}}
+							<i class="fa fa-chevron-right pull-right"></i>
+						</span>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-8 details">
+				<div class="row">
+					<div class="col-sm-5">
+						<h4>Mesa 1 - #4324234</h4>
+					</div>
+					<div class="col-sm-7 text-right">
+						<form>
+							<div class="form-group">
+								<input type="text" class="form-control discount" placeholder="Desconto">
+								<button type="submit" class="btn btn-default">Aplicar</button>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
+						<table class="table table-striped table-details">
+							<thead>
+								<th>Produto</th>
+								<th class="text-right">Subtotal</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										Dish Name Here<br/>
+										4 x R$10,00
+									</td>
+									<td class="text-right">
+										R$40,00
+									</td>
+								</tr>
+								<tr>
+									<td>
+										Dish Name Here<br/>
+										2 x R$10,00
+									</td>
+									<td class="text-right">
+										R$20,00
+									</td>
+								</tr>
+								<tr>
+									<td>
+										Dish Name Here<br/>
+										1 x R$10,00
+									</td>
+									<td class="text-right">
+										R$10,00
+									</td>
+								</tr>
+								<tr>
+									<td class="label-discount label-red">Desconto</td>
+									<td class="label-discount label-red text-right">
+										R$0,00
+									</td>
+								</tr>
+								<tr>
+									<td class="label-discount label-blue">Taxa de Serviço (5%)</td>
+									<td class="label-discount label-blue text-right">
+										R$4,50
+									</td>
+								</tr>
+								<tr>
+									<td class="label-total label-green">Total</td>
+									<td class="label-total label-green text-right">
+										R$74,50
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12 label-gift">
+						<i class="fa fa-gift"></i> O brinde correspondente é o café xxxx.
+					</div>
+					<div class="col-sm-4">
+						<button type="button" class="btn btn-default btn-block">Dinheiro</button>
+					</div>
+					<div class="col-sm-4">
+						<button type="button" class="btn btn-default btn-block">Débito</button>
+					</div>
+					<div class="col-sm-4">
+						<button type="button" class="btn btn-default btn-block">Crédito</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</section>
