add products page

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="button_logout">
-				<button class="btn btn-default" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
+				<button class="btn btn-secondary" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
 			</li>
 		</ul>
 	</div>
