--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -8,7 +8,7 @@
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="button_logout">
-				<button class="btn btn-default" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
+				<button class="btn btn-secondary" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
 			</li>
 		</ul>
 	</div>
@@ -17,13 +17,13 @@
 <section>
     <section class="wrapper">
         <div class="row">
-            <div class="col-sm-12 products">
+            <div class="col-sm-12 panel-products">
                 <section class="panel">
                     <div class="panel-body">
                         <table class="table table-panel" width="100%">
                             <thead>
                             <tr>
-                                <th>Pedido #</th>
+                                <th class="text-center">#</th>
                                 <th>Produtos</th>
                                 <th class="text-center">Mesa</th>
                                 <th class="text-center">Ações</th>
@@ -32,7 +32,7 @@
                             <tbody>
 								<tr *ngFor="let order of orders"
 									[ngClass]="{'red': order.status == 2, 'yellow': order.status == 3, 'blue': order.status == 4, 'green': order.status == 5}">
-									<td>
+									<td class="text-center">
 										{{order.id}}
 									</td>
 									<td class="product">
