--- a/src/app/cashier/cashier.component.html
+++ b/src/app/cashier/cashier.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="button_logout">
-				<button class="btn btn-default" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
+				<button class="btn btn-secondary" ng-click="logout()"><i class="fa fa-sign-out"></i>&nbsp; Sair</button>
 			</li>
 		</ul>
 	</div>
@@ -57,7 +57,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control discount" placeholder="Desconto">
-							<button type="submit" class="btn btn-default">Aplicar</button>
+							<button type="submit" class="btn btn-secondary">Aplicar</button>
 						</div>
 					</form>
 				</div>
@@ -124,13 +124,13 @@
 					<i class="fa fa-gift"></i> O brinde correspondente é o café xxxx.
 				</div>
 				<div class="col-sm-4">
-					<button type="button" class="btn btn-default btn-block">Dinheiro</button>
+					<button type="button" class="btn btn-secondary btn-block">Dinheiro</button>
 				</div>
 				<div class="col-sm-4">
-					<button type="button" class="btn btn-default btn-block">Débito</button>
+					<button type="button" class="btn btn-secondary btn-block">Débito</button>
 				</div>
 				<div class="col-sm-4">
-					<button type="button" class="btn btn-default btn-block">Crédito</button>
+					<button type="button" class="btn btn-secondary btn-block">Crédito</button>
 				</div>
 			</div>
 		</div>
