--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -64,7 +64,7 @@
 			<div class="col-sm-12">
 				<div class="box-body">
 					<div class="row product" *ngFor="let item of items()">
-						<div class="col-sm-9">
+						<div class="col-sm-9 padding-left-0">
 							{{item.menuItem.nome}}
 						</div>
 						<div class="col-sm-3 text-right">
@@ -72,7 +72,7 @@
 								<i class="fa fa-trash"></i>
 							</a>
 						</div>
-						<div class="col-sm-7">
+						<div class="col-sm-7 padding-left-0">
 							<a (click)="decreaseQty(item)" class="btn btn-sm danger">
 								<i class="fa fa-minus-circle"></i>
 							</a>
