--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@
     padding-right: 0;
 }
 
+.padding-left-0 {
+    padding-left: 0;
+}
+
 .home {
     margin-top: 50px;
     padding-left: 40px;
