--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -65,7 +65,7 @@
 				<div class="form-group row">
 					<div class="col-sm-11 text-center">
 						<button type="button" [routerLink]="['/products']" class="btn btn-secondary btn-lg">Voltar</button>
-						<button type="submit" class="btn btn-primary btn-lg">Salvar</button>
+						<button (click)="save()" class="btn btn-primary btn-lg">Salvar</button>
 					</div>
 				</div>
 			</form>
